<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameConfig">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarXtxt"
        android:text=""/>
    <SeekBar
        android:id="@+id/seekBarX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="6" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarYtxt"
        android:text=""/>
    <SeekBar
        android:id="@+id/seekBarY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="6" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarColorstxt"
        android:text=""/>
    <SeekBar
        android:id="@+id/seekBarColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"/>

<!--    Contenido-->
    <RadioGroup
        android:id="@+id/radioGroup01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_color"
            />
        <RadioButton
            android:id="@+id/radioButtonN"
            android:text="@string/radio_number"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>
<!--    otras opciones-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkBoxSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_sound"
            />
        <CheckBox
            android:id="@+id/checkBoxVibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_vibrate"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textAlignment="center"
        android:id="@+id/startBtn"
        android:gravity="center_horizontal|fill_horizontal|center"
        android:layout_gravity="center_horizontal|center"
        />
</LinearLayout>